--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.16.7",
+    "validator": "13.6.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
